<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddPlaceActivity"
    android:orientation="vertical"
    android:padding="@dimen/_8sdp">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_select_image"
        android:textSize="@dimen/_12ssp"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/_10sdp"/>

    <ImageButton
        android:id="@+id/add_image_btn"
        android:layout_width="@dimen/_60sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:src="@android:drawable/ic_input_add"
        android:layout_marginTop="@dimen/_5sdp"
        android:scaleType="centerInside"
        android:contentDescription="TODO" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_place_name"
        android:textSize="@dimen/_12ssp"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/_10sdp"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_place_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:paddingTop="@dimen/_10sdp"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:textColor="@color/black"
        android:hint="Enter Place Name"
        android:textSize="@dimen/_14ssp"
        android:background="@drawable/edit_text_background"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_place_address"
        android:textSize="@dimen/_12ssp"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/_10sdp"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_place_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:paddingTop="@dimen/_10sdp"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:textColor="@color/black"
        android:hint="Enter Place Address"
        android:textSize="@dimen/_14ssp"
        android:background="@drawable/edit_text_background"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_place_description"
        android:textSize="@dimen/_12ssp"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/_10sdp"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_place_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:paddingTop="@dimen/_10sdp"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:textColor="@color/black"
        android:maxLines="4"
        android:hint="Enter Place Description"
        android:textSize="@dimen/_14ssp"
        android:background="@drawable/edit_text_background"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_select_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:textColor="@color/white"
        android:text="@string/txt_select_location"
        android:textSize="@dimen/_14ssp"
        android:background="@color/teal_700"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_add_place"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:textColor="@color/white"
        android:text="@string/txt_add_place"
        android:textSize="@dimen/_14ssp"
        android:background="@color/teal_700"/>

</LinearLayout>