<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/_8sdp"
    tools:context=".AddPlaceActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:elevation="10dp"
        app:cardCornerRadius="@dimen/_10sdp">
        <ImageView
            android:id="@+id/place_image"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_140sdp"
            android:scaleType="centerCrop"
            android:src="@drawable/test_image_1" />
    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_place_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/txt_place_name"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/ic_location" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_place_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_5sdp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="place address"
            android:textSize="@dimen/_14ssp" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_place_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:text="@string/txt_place_description"
        android:textColor="@color/black"
        android:textSize="@dimen/_12ssp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_view_on_map"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@color/teal_700"
        android:text="@string/txt_view_map"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_mark_visited"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@color/teal_700"
        android:text="@string/txt_mark_visited"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp" />

</LinearLayout>