<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_4sdp"
    android:elevation="@dimen/_5sdp"
    android:orientation="horizontal"
    android:padding="@dimen/_5sdp"
    app:cardCornerRadius="@dimen/_5sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/place_image"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_120sdp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:scaleType="centerCrop"
            android:src="@drawable/test_image_1" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/place_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_2sdp"
            android:padding="@dimen/_2sdp"
            android:text="Place Title"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#4d4d4d"
            android:textStyle="bold"
            android:textSize="@dimen/_16ssp"
            />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:src="@drawable/ic_location"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/place_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="place address"
            android:textSize="@dimen/_14ssp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:maxLines="1"
            android:ellipsize="end"/>
    </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/place_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:text="place description"
            android:textSize="@dimen/_14ssp"
            android:maxLines="2"
            android:ellipsize="end"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_10sdp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_view_details"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginHorizontal="@dimen/_5sdp"
                android:textColor="@color/white"
                android:text="@string/txt_view_details"
                android:textSize="@dimen/_14ssp"
                android:background="@color/green"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_update"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginHorizontal="@dimen/_5sdp"
                android:textColor="@color/white"
                android:text="@string/txt_update"
                android:textSize="@dimen/_14ssp"
                android:background="@color/green"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_delete"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginHorizontal="@dimen/_5sdp"
                android:textColor="@color/white"
                android:text="@string/txt_delete"
                android:textSize="@dimen/_14ssp"
                android:background="@color/red"/>

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>